broken ui fixes

--- a/src/app/checkout/checkout.component.scss
+++ b/src/app/checkout/checkout.component.scss
@@ -1,48 +1,109 @@
 @import "../../assets/scss/variables.scss";
 .delivery-data {
-  padding-top: 18px;
-  margin-bottom: 40px;
-  @include max-screen($desktop) {
-    padding-top: 0;
-  }
-  @include max-screen($mobile) {
-    margin-bottom: 30px;
-  }
-  h1 {
-    margin-bottom: 22px;
-  }
-  &__inner {
-    padding: 38px 40px;
-    background-color: $color-white;
-    @include max-screen($tablet) {
-      padding: 30px 20px;
+    padding-top: 18px;
+    margin-bottom: 40px;
+    @include max-screen($desktop) {
+        padding-top: 0;
     }
     @include max-screen($mobile) {
-      padding: 25px 15px;
+        margin-bottom: 30px;
     }
-  }
-  &__content {
-    margin-top: -8px;
-    width: calc(100% - 390px);
-    @include max-screen($desktop) {
-      width: calc(100% - 350px);
+    h1 {
+        margin-bottom: 22px;
     }
-    @include max-screen($tablet) {
-      width: 100%;
-      margin-top: 0;
+    h3 {
+        padding-bottom: 12px;
+        border-bottom: 1px solid $color-disabled-dark;
     }
-  }
-  &__info {
-    width: 390px;
-    padding-left: 44px;
-    @include max-screen($desktop) {
-      width: 350px;
-      padding-left: 20px;
+    &__inner {
+        padding: 38px 40px;
+        background-color: $color-white;
+        @include max-screen($tablet) {
+            padding: 30px 20px;
+        }
+        @include max-screen($mobile) {
+            padding: 25px 15px;
+        }
     }
-    @include max-screen($tablet) {
-      width: 100%;
-      margin-top: 30px;
-      padding-left: 0;
+    &__content {
+        margin-top: -8px;
+        width: calc(100% - 390px);
+        @include max-screen($desktop) {
+            width: calc(100% - 350px);
+        }
+        @include max-screen($tablet) {
+            width: 100%;
+            margin-top: 0;
+        }
     }
-  }
+    &__info {
+        width: 390px;
+        padding-left: 44px;
+        @include max-screen($desktop) {
+            width: 350px;
+            padding-left: 20px;
+        }
+        @include max-screen($tablet) {
+            width: 100%;
+            margin-top: 30px;
+            padding-left: 0;
+        }
+    }
+    &__tabs {
+        padding-top: 38px;
+        @include max-screen($mobile) {
+            padding-top: 5px;
+        }
+        .nav-tabs {
+            border: 0;
+            .nav-item {
+                @include max-screen($mobile) {
+                    width: 100%;
+                }
+                .nav-link {
+                    width: 100%;
+                    display: flex;
+                    font-size: 16px;
+                    font-weight: 500;
+                    border-radius: 0;
+                    padding: 27px 15px;
+                    align-items: center;
+                    color: $color-secondary;
+                    border: 1px solid $color-secondary;
+                    @include max-screen($tablet) {
+                        padding: 15px;
+                    }
+                    @include max-screen($mobile) {
+                        height: 50px;
+                        padding: 10px 15px;
+                        margin-bottom: 10px;
+                    }
+                    img {
+                        @include max-screen($tablet) {
+                            max-width: 20px;
+                        }
+                        & + img {
+                            display: none;
+                        }
+                    }
+                    &.active {
+                        color: $color-white;
+                        background-color: $color-secondary;
+                        img {
+                            display: none;
+                            & + img {
+                                display: block;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .tab-content {
+            padding-top: 58px;
+            @include max-screen($tablet) {
+                padding-top: 30px;
+            }
+        }
+    }
 }
