--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -31,10 +31,16 @@ img {
 .color-picker{
     z-index: 1 !important;
 }
+
 ul{
     list-style: none;
     padding: 0;
     margin: 0;
+}
+app-root {
+    display: block;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 .container {
     width: 100%;
